docs/operator-manual/examples/ingress/aws/anotherArgoCDServerGrpcServiceIfYouUseALB.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    # enable
    #   AWS ALB can communicate -- ,through GRPC, with -- this service
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
  labels:
    app: argogrpc
  name: argogrpc
  namespace: argocd
spec:
  ports:
    - name: "443"
      port: 443
      protocol: TCP
      targetPort: 8080
  selector:
    # SAME selector as built-in Argo CD Server service
    app.kubernetes.io/name: argocd-server
  sessionAffinity: None
  type: NodePort
